--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     </header>
 
     <section id="showcase">
-        <img src="/Users/aravind/Downloads/2.png" alt="Ace Sports Club Logo">
+        <img src="2.png" alt="Ace Sports Club Logo">
         <div>
             <h1>Welcome to Ace Sports Club</h1>
             <p>Your home for badminton in Krakow, Poland</p>
@@ -157,9 +157,9 @@
         <section id="gallery" class="section">
             <h2>Previous Tournaments</h2>
             <div class="gallery">
-                <img src="/Users/aravind/Downloads/IMG-20240428-WA0009.jpg" alt="Tournament 1">
-                <img src="/Users/aravind/Downloads/IMG-20240428-WA0025.jpg" alt="Tournament 2">
-                <img src="/Users/aravind/Downloads/IMG-20240428-WA0038.jpg" alt="Tournament 3">
+                <img src="IMG-20240428-WA0009.jpg" alt="Tournament 1">
+                <img src="IMG-20240428-WA0025.jpg" alt="Tournament 2">
+                <img src="IMG-20240428-WA0038.jpg" alt="Tournament 3">
             </div>
         </section>
     </div>
