--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         }
         #showcase {
             background: url('badminton.jpg') no-repeat center center/cover;
-            color: #fff;
+            color: #fff11;
             height: 300px;
             display: flex;
             justify-content: center;
