--- a/index.html
+++ b/index.html
@@ -17,10 +17,19 @@
             color: #fff;
             padding: 20px 0;
             text-align: center;
+            position: relative;
         }
         header h1 {
             margin: 0;
             font-size: 2.5em;
+        }
+        header img {
+            position: absolute;
+            top: 50%;
+            left: 20px;
+            transform: translateY(-50%);
+            width: 100px;
+            height: auto;
         }
         nav {
             margin: 20px 0;
@@ -41,13 +50,12 @@
         }
         #showcase {
             background: url('badminton.jpg') no-repeat center center/cover;
-            color: #fff11;
+            color: #fff;
             height: 300px;
             display: flex;
             justify-content: center;
             align-items: center;
             text-align: center;
-            position: relative;
         }
         #showcase h1 {
             font-size: 2.5em;
@@ -55,13 +63,6 @@
         }
         #showcase p {
             font-size: 1.2em;
-        }
-        #showcase img {
-            position: absolute;
-            top: 20px;
-            left: 20px;
-            width: 100px;
-            height: auto;
         }
         .container {
             width: 90%;
@@ -117,11 +118,11 @@
 </head>
 <body>
     <header>
+        <img src="/Users/aravind/Downloads/2.png" alt="Ace Sports Club Logo">
         <h1>Ace Sports Club</h1>
     </header>
 
     <section id="showcase">
-        <img src="2.png" alt="Ace Sports Club Logo">
         <div>
             <h1>Welcome to Ace Sports Club</h1>
             <p>Your home for badminton in Krakow, Poland</p>
@@ -157,9 +158,12 @@
         <section id="gallery" class="section">
             <h2>Previous Tournaments</h2>
             <div class="gallery">
-                <img src="IMG-20240428-WA0009.jpg" alt="Tournament 1">
-                <img src="IMG-20240428-WA0025.jpg" alt="Tournament 2">
-                <img src="IMG-20240428-WA0038.jpg" alt="Tournament 3">
+                <img src="/Users/aravind/Downloads/IMG-20240428-WA0009.jpg" alt="Tournament 1">
+                <img src="/Users/aravind/Downloads/IMG-20240428-WA0025.jpg" alt="Tournament 2">
+                <img src="/Users/aravind/Downloads/IMG-20240428-WA0038.jpg" alt="Tournament 3">
+                <img src="/Users/aravind/Downloads/IMG-20240428-WA0009.jpg" alt="Tournament 4">
+                <img src="/Users/aravind/Downloads/IMG-20240428-WA0025.jpg" alt="Tournament 5">
+                <img src="/Users/aravind/Downloads/IMG-20240428-WA0038.jpg" alt="Tournament 6">
             </div>
         </section>
     </div>
@@ -169,11 +173,3 @@
     </footer>
 </body>
 </html>
-'''
-
-# Save the updated HTML content to a file
-file_path = '/mnt/data/ace_sports_club_final_v3.html'
-with open(file_path, 'w') as file:
-    file.write(html_content)
-
-file_path
