--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         }
         #showcase {
             background: url('badminton.jpg') no-repeat center center/cover;
-            color: #fff;
+            color: #fff111;
             height: 300px;
             display: flex;
             justify-content: center;
@@ -118,7 +118,7 @@
 </head>
 <body>
     <header>
-        <img src="/Users/aravind/Downloads/2.png" alt="Ace Sports Club Logo">
+        <img src="2.png" alt="Ace Sports Club Logo">
         <h1>Ace Sports Club</h1>
     </header>
 
@@ -158,12 +158,12 @@
         <section id="gallery" class="section">
             <h2>Previous Tournaments</h2>
             <div class="gallery">
-                <img src="/Users/aravind/Downloads/IMG-20240428-WA0009.jpg" alt="Tournament 1">
-                <img src="/Users/aravind/Downloads/IMG-20240428-WA0025.jpg" alt="Tournament 2">
-                <img src="/Users/aravind/Downloads/IMG-20240428-WA0038.jpg" alt="Tournament 3">
-                <img src="/Users/aravind/Downloads/IMG-20240428-WA0009.jpg" alt="Tournament 4">
-                <img src="/Users/aravind/Downloads/IMG-20240428-WA0025.jpg" alt="Tournament 5">
-                <img src="/Users/aravind/Downloads/IMG-20240428-WA0038.jpg" alt="Tournament 6">
+                <img src="IMG-20240428-WA0009.jpg" alt="Tournament 1">
+                <img src="IMG-20240428-WA0025.jpg" alt="Tournament 2">
+                <img src="IMG-20240428-WA0038.jpg" alt="Tournament 3">
+                <img src="IMG-20240428-WA0009.jpg" alt="Tournament 4">
+                <img src="IMG-20240428-WA0025.jpg" alt="Tournament 5">
+                <img src="IMG-20240428-WA0038.jpg" alt="Tournament 6">
             </div>
         </section>
     </div>
