--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             width: calc(33.333% - 10px);
             border-radius: 8px;
         }
-        .winners-list {
+        .winners-list, .upcoming-tournaments-list {
             max-height: 300px;
             overflow-y: auto;
         }
@@ -134,13 +134,27 @@
     <div class="container">
         <section id="tournaments" class="section">
             <h2>Upcoming Tournaments</h2>
-            <p><strong>Date:</strong> July 15, 2024</p>
-            <p><strong>Rules:</strong></p>
-            <ul>
-                <li>Single elimination tournament</li>
-                <li>Best of three sets</li>
-                <li>Standard badminton rules apply</li>
-            </ul>
+            <div class="upcoming-tournaments-list">
+                <p><strong>Date:</strong> July 27, 2024</p>
+                <ul>
+                    <li>Men’s Singles (Open)</li>
+                    <li>Women’s Singles (Open)</li>
+                </ul>
+                <p><strong>Date:</strong> August 3, 2024</p>
+                <ul>
+                    <li>Men’s Doubles (Open)</li>
+                    <li>Men’s Doubles (Intermediate)</li>
+                    <li>Women’s Doubles (Open)</li>
+                    <li>Mixed Doubles (Open)</li>
+                    <li>Kids</li>
+                    <li>4Fun (at least one partner should not have registered in Open or intermediate category)</li>
+                </ul>
+                <p><strong>Rules:</strong></p>
+                <ul>
+                    <li>All league matches to be played for 21 points - 1 set</li>
+                    <li>All knockout games to be played to 21 points - 3 sets</li>
+                </ul>
+            </div>
         </section>
 
         <section id="registration" class="section">
@@ -156,7 +170,7 @@
                 <ul>
                     <li>1.⁠ ⁠Dashuri & Surya</li>
                     <li>2.⁠ ⁠⁠Hrithesh & Saran</li>
-                    <li>3.⁠ ⁠⁠Tarun & Srikar</li>
+                    <li>3.⁠ ⁠⁠Tarun & Srikara</li>
                 </ul>
                 <h3>Women’s Singles</h3>
                 <ul>
@@ -206,18 +220,19 @@
         <section id="gallery" class="section">
             <h2>Previous Tournaments</h2>
             <div class="gallery">
-                <img src="IMG-20240428-WA0009.jpg" alt="Tournament 1">
-                <img src="IMG-20240428-WA0025.jpg" alt="Tournament 2">
-                <img src="IMG-20240428-WA0038.jpg" alt="Tournament 3">
-                <img src="IMG-20240428-WA0009.jpg" alt="Tournament 4">
-                <img src="IMG-20240428-WA0025.jpg" alt="Tournament 5">
-                <img src="IMG-20240428-WA0038.jpg" alt="Tournament 6">
+                <img src="1.jpg" alt="Tournament 1">
+                <img src="2.jpg" alt="Tournament 2">
+                <img src="3.jpg" alt="Tournament 3">
+                <img src="4.jpg" alt="Tournament 4">
+                <img src="IMG-20240428-WA0009.jpg" alt="Tournament 5">
+                <img src="IMG-20240428-WA0025.jpg" alt="Tournament 6">
+                <img src="IMG-20240428-WA0038.jpg" alt="Tournament 7">
             </div>
         </section>
     </div>
 
     <footer>
-        <p>Ace Badminton Krakow, Krakow, Poland &copy; 2024</p>
+        <p>Ace Badminton Krakow, Krakow, Poland &copy; 2023</p>
     </footer>
 </body>
 </html>
