--- a/index.html
+++ b/index.html
@@ -220,10 +220,10 @@
         <section id="gallery" class="section">
             <h2>Previous Tournaments</h2>
             <div class="gallery">
-                <img src="1.jpg" alt="Tournament 1">
-                <img src="2.jpg" alt="Tournament 2">
-                <img src="3.jpg" alt="Tournament 3">
-                <img src="4.jpg" alt="Tournament 4">
+                <img src="1.jpeg" alt="Tournament 1">
+                <img src="2.jpeg" alt="Tournament 2">
+                <img src="3.jpeg" alt="Tournament 3">
+                <img src="4.jpeg" alt="Tournament 4">
                 <img src="IMG-20240428-WA0009.jpg" alt="Tournament 5">
                 <img src="IMG-20240428-WA0025.jpg" alt="Tournament 6">
                 <img src="IMG-20240428-WA0038.jpg" alt="Tournament 7">
