--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
             color: #333;
         }
         header {
-            background: #333 url('2.png') no-repeat center center;
-            background-size: 150px; /* Adjust the size as needed */
+            background: #333;
             color: #fff;
             padding: 20px 0;
             text-align: center;
@@ -45,7 +44,7 @@
         }
         #showcase {
             background: url('badminton.jpg') no-repeat center center/cover;
-            color: #fff11;
+            color: #fff;
             height: 200px;
             display: flex;
             justify-content: center;
@@ -170,7 +169,7 @@
                 <ul>
                     <li>1.⁠ ⁠Dashuri & Surya</li>
                     <li>2.⁠ ⁠⁠Hrithesh & Saran</li>
-                    <li>3.⁠ ⁠⁠Tarun & Srikara</li>
+                    <li>3.⁠ ⁠⁠Tarun & Srikar</li>
                 </ul>
                 <h3>Women’s Singles</h3>
                 <ul>
@@ -232,7 +231,5 @@
     </div>
 
     <footer>
-        <p>Ace Badminton Krakow, Krakow, Poland &copy; 2023</p>
-    </footer>
-</body>
-</html>
+        <p>Ace Badminton Krakow, Krakow, Poland &copy; 2024</p>
+    </
