--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         }
         #showcase {
             background: url('badminton.jpg') no-repeat center center/cover;
-            color: #fff;
+            color: #fff11;
             height: 200px;
             display: flex;
             justify-content: center;
