--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             padding: 0;
             background-color: #f9f9f9;
             color: #333;
+            padding-bottom: 60px; /* Ensure the footer doesn't cover content */
         }
         header {
             background: #333;
@@ -44,7 +45,7 @@
         }
         #showcase {
             background: url('badminton.jpg') no-repeat center center/cover;
-            color: #fff11;
+            color: #333;
             height: 200px;
             display: flex;
             justify-content: center;
@@ -132,7 +133,7 @@
 
     <div class="container">
         <section id="tournaments" class="section">
-            <h2>Upcoming Tournaments</h2>
+            <h2>Upcoming Tournament</h2>
             <div class="upcoming-tournaments-list">
                 <p><strong>Date:</strong> July 27, 2024</p>
                 <ul>
@@ -157,13 +158,13 @@
         </section>
 
         <section id="registration" class="section">
-            <h2>Register for a Tournament</h2>
+            <h2>Register for upcoming Tournament</h2>
             <p>Please fill out the registration form using the link below:</p>
             <a href="https://forms.gle/examplelink" target="_blank">Registration Form</a>
         </section>
 
         <section id="winners" class="section">
-            <h2>Winners List</h2>
+            <h2>Last Tournament Winners List</h2>
             <div class="winners-list">
                 <h3>Kids</h3>
                 <ul>
@@ -230,6 +231,4 @@
         </section>
     </div>
 
-    <footer>
-        <p>Ace Badminton Krakow, Krakow, Poland &copy; 2024</p>
-    </
+   
