--- a/index.html
+++ b/index.html
@@ -230,5 +230,9 @@
             </div>
         </section>
     </div>
-
+    <footer>
+        <p>Ace Badminton Krakow, Krakow, Poland &copy; 2024</p>
+    </footer>
+    </body>
+</html>
    
