--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
         </section>
     </div>
     <footer>
-        <p>Ace Badminton Krakow, Krakow, Poland &copy; 2024</p>
+        <p>Ace Badminton Krakow, Poland &copy; 2023</p>
     </footer>
     </body>
 </html>
