--- a/index.html
+++ b/index.html
@@ -75,11 +75,12 @@
         .section h2 {
             margin-top: 0;
         }
-        .gallery {
+         .gallery {
             display: flex;
             flex-wrap: nowrap;
             overflow-x: auto;
             gap: 10px;
+            animation: scroll 20s linear infinite;
         }
         .gallery img {
             width: calc(33.333% - 10px);
@@ -115,6 +116,14 @@
         @media (max-width: 480px) {
             .gallery img {
                 width: 100%;
+            }
+        }
+        @keyframes scroll {
+            0% {
+                transform: translateX(0);
+            }
+            100% {
+                transform: translateX(calc(-100% + 100vw));
             }
         }
     </style>
