--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
             padding: 0;
             background-color: #f9f9f9;
             color: #333;
-            padding-bottom: 60px; /* Ensure the footer doesn't cover content */
         }
         header {
             background: #333;
@@ -45,7 +44,7 @@
         }
         #showcase {
             background: url('badminton.jpg') no-repeat center center/cover;
-            color: #333;
+            color: #111;
             height: 200px;
             display: flex;
             justify-content: center;
@@ -75,16 +74,16 @@
         .section h2 {
             margin-top: 0;
         }
-         .gallery {
+        .gallery {
             display: flex;
             flex-wrap: nowrap;
-            overflow-x: auto;
+            overflow: hidden;
             gap: 10px;
-            animation: scroll 3s linear infinite;
         }
         .gallery img {
-            width: calc(33.333% - 10px);
+            min-width: calc(33.333% - 10px);
             border-radius: 8px;
+            transition: transform 0.5s ease;
         }
         .winners-list, .upcoming-tournaments-list {
             max-height: 300px;
@@ -95,9 +94,6 @@
             color: #fff;
             text-align: center;
             padding: 10px 0;
-            position: fixed;
-            width: 100%;
-            bottom: 0;
         }
         @media (max-width: 768px) {
             header {
@@ -118,14 +114,6 @@
                 width: 100%;
             }
         }
-        @keyframes scroll {
-            0% {
-                transform: translateX(0);
-            }
-            100% {
-                transform: translateX(calc(-100% + 100vw));
-            }
-        }
     </style>
 </head>
 <body>
@@ -142,7 +130,7 @@
 
     <div class="container">
         <section id="tournaments" class="section">
-            <h2>Upcoming Tournament</h2>
+            <h2>Upcoming Tournaments</h2>
             <div class="upcoming-tournaments-list">
                 <p><strong>Date:</strong> July 27, 2024</p>
                 <ul>
@@ -167,19 +155,19 @@
         </section>
 
         <section id="registration" class="section">
-            <h2>Register for upcoming Tournament</h2>
+            <h2>Register for a Tournament</h2>
             <p>Please fill out the registration form using the link below:</p>
             <a href="https://forms.gle/examplelink" target="_blank">Registration Form</a>
         </section>
 
         <section id="winners" class="section">
-            <h2>Last Tournament Winners List</h2>
+            <h2>Winners List</h2>
             <div class="winners-list">
                 <h3>Kids</h3>
                 <ul>
                     <li>1.⁠ ⁠Dashuri & Surya</li>
                     <li>2.⁠ ⁠⁠Hrithesh & Saran</li>
-                    <li>3.⁠ ⁠⁠Tarun & Srikar</li>
+                    <li>3.⁠ ⁠⁠Tarun & Srikara</li>
                 </ul>
                 <h3>Women’s Singles</h3>
                 <ul>
@@ -239,9 +227,27 @@
             </div>
         </section>
     </div>
+
     <footer>
-        <p>Ace Badminton Krakow, Poland &copy; 2023</p>
+        <p>Ace Badminton Krakow, Krakow, Poland &copy; 2024</p>
     </footer>
-    </body>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            const gallery = document.querySelector('.gallery');
+            const images = gallery.querySelectorAll('img');
+            let index = 0;
+
+            function scrollImages() {
+                index++;
+                if (index >= images.length) {
+                    index = 0;
+                }
+                gallery.style.transform = `translateX(-${index * (images[0].offsetWidth + 10)}px)`;
+            }
+
+            setInterval(scrollImages, 2000); // Adjust the interval as needed (2000ms = 2s)
+        });
+    </script>
+</body>
 </html>
-   
