--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             padding: 0;
             background-color: #f9f9f9;
             color: #333;
+            padding-bottom: 60px; /* Ensure the footer doesn't cover content */
         }
         header {
             background: #333;
@@ -44,7 +45,7 @@
         }
         #showcase {
             background: url('badminton.jpg') no-repeat center center/cover;
-            color: #111;
+            color: #333;
             height: 200px;
             display: flex;
             justify-content: center;
@@ -77,13 +78,12 @@
         .gallery {
             display: flex;
             flex-wrap: nowrap;
-            overflow: hidden;
+            overflow-x: auto;
             gap: 10px;
         }
         .gallery img {
-            min-width: calc(33.333% - 10px);
+            width: calc(33.333% - 10px);
             border-radius: 8px;
-            transition: transform 0.5s ease;
         }
         .winners-list, .upcoming-tournaments-list {
             max-height: 300px;
@@ -94,6 +94,9 @@
             color: #fff;
             text-align: center;
             padding: 10px 0;
+            position: fixed;
+            width: 100%;
+            bottom: 0;
         }
         @media (max-width: 768px) {
             header {
@@ -130,7 +133,7 @@
 
     <div class="container">
         <section id="tournaments" class="section">
-            <h2>Upcoming Tournaments</h2>
+            <h2>Upcoming Tournament</h2>
             <div class="upcoming-tournaments-list">
                 <p><strong>Date:</strong> July 27, 2024</p>
                 <ul>
@@ -155,13 +158,13 @@
         </section>
 
         <section id="registration" class="section">
-            <h2>Register for a Tournament</h2>
+            <h2>Register for upcoming Tournament</h2>
             <p>Please fill out the registration form using the link below:</p>
             <a href="https://forms.gle/examplelink" target="_blank">Registration Form</a>
         </section>
 
         <section id="winners" class="section">
-            <h2>Winners List</h2>
+            <h2>Last Tournament Winners List</h2>
             <div class="winners-list">
                 <h3>Kids</h3>
                 <ul>
@@ -227,27 +230,9 @@
             </div>
         </section>
     </div>
-
     <footer>
-        <p>Ace Badminton Krakow, Krakow, Poland &copy; 2024</p>
+        <p>Ace Badminton Krakow, Poland &copy; 2023</p>
     </footer>
-
-    <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            const gallery = document.querySelector('.gallery');
-            const images = gallery.querySelectorAll('img');
-            let index = 0;
-
-            function scrollImages() {
-                index++;
-                if (index >= images.length) {
-                    index = 0;
-                }
-                gallery.style.transform = `translateX(-${index * (images[0].offsetWidth + 10)}px)`;
-            }
-
-            setInterval(scrollImages, 2000); // Adjust the interval as needed (2000ms = 2s)
-        });
-    </script>
-</body>
+    </body>
 </html>
+   
