--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ace Badminton Krakow</title>
+    <!-- Google Fonts: Roboto -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: 'Arial', sans-serif;
+            font-family: 'Roboto', sans-serif;
             margin: 0;
             padding: 0;
             background-color: #f9f9f9;
@@ -160,7 +162,7 @@
         <section id="registration" class="section">
             <h2>Register for upcoming Tournament</h2>
             <p>Please fill out the registration form using the link below:</p>
-            <a href="https://forms.gle/examplelink" target="_blank">Registration Form</a>
+            <a href="https://forms.gle/xgKPh4gEemQLzuiX6" target="_blank">Registration Form</a>
         </section>
 
         <section id="winners" class="section">
@@ -176,43 +178,43 @@
                 <ul>
                     <li>1.⁠ ⁠Shika</li>
                     <li>2.⁠ ⁠⁠Prathi</li>
-                    <li>3.⁠ ⁠⁠Dashuri</li>
+                    <li>3.⁠ ⁠Dashuri</li>
                 </ul>
                 <h3>Women’s Doubles</h3>
                 <ul>
                     <li>1.⁠ ⁠Shika & Prathi</li>
                     <li>2.⁠ ⁠⁠Nidhi & Sahana</li>
-                    <li>3.⁠ ⁠⁠Aishwarya & Swenzy</li>
+                    <li>3.⁠ ⁠Aishwarya & Swenzy</li>
                 </ul>
                 <h3>Mixed Doubles</h3>
                 <ul>
                     <li>1.⁠ ⁠Sasi & Nidhi</li>
                     <li>2.⁠ ⁠⁠Mobeen & Vinay</li>
-                    <li>3.⁠ ⁠⁠Zafar & Shika</li>
+                    <li>3.⁠ ⁠Zafar & Shika</li>
                 </ul>
                 <h3>Men’s Singles (Open)</h3>
                 <ul>
                     <li>1.⁠ ⁠Praveen Vargheese</li>
-                    <li>2.⁠ ⁠⁠Abhishek</li>
-                    <li>3.⁠ ⁠⁠Adityan</li>
+                    <li>2.⁠ ⁠Abhishek</li>
+                    <li>3.⁠ ⁠Adityan</li>
                 </ul>
                 <h3>Men’s Doubles (Open)</h3>
                 <ul>
                     <li>1.⁠ ⁠Praveen Vargheese & Abhishek</li>
                     <li>2.⁠ ⁠Amit & Tolik</li>
-                    <li>3.⁠ ⁠⁠Adityan & Vipul</li>
+                    <li>3.⁠ ⁠Adityan & Vipul</li>
                 </ul>
                 <h3>Men’s Doubles (Intermediate)</h3>
                 <ul>
                     <li>1.⁠ ⁠Amit & Poovarasan</li>
-                    <li>2.⁠ ⁠⁠Swapnil & Arjun</li>
-                    <li>3.⁠ ⁠⁠Praveen Vargheese & Zafar</li>
+                    <li>2.⁠ ⁠Swapnil & Arjun</li>
+                    <li>3.⁠ ⁠Praveen Vargheese & Zafar</li>
                 </ul>
                 <h3>4Fun</h3>
                 <ul>
                     <li>1.⁠ ⁠Pyarry & Ethan</li>
-                    <li>2.⁠ ⁠⁠Sachin & Tom</li>
-                    <li>3.⁠ ⁠⁠Aashal & Roopan</li>
+                    <li>2.⁠ ⁠Sachin & Tom</li>
+                    <li>3.⁠ ⁠Aashal & Roopan</li>
                 </ul>
             </div>
         </section>
@@ -221,18 +223,21 @@
             <h2>Previous Tournaments</h2>
             <div class="gallery">
                 <img src="1.jpeg" alt="Tournament 1">
+                <img src="5.jpeg" alt="Tournament 2">
+                <img src="IMG-20240428-WA0038.jpg" alt="Tournament 7">
+                <img src="6.jpeg" alt="Tournament 2">
+                <img src="7.jpeg" alt="Tournament 2">
+                <img src="8.jpeg" alt="Tournament 2">
                 <img src="2.jpeg" alt="Tournament 2">
                 <img src="3.jpeg" alt="Tournament 3">
                 <img src="4.jpeg" alt="Tournament 4">
                 <img src="IMG-20240428-WA0009.jpg" alt="Tournament 5">
                 <img src="IMG-20240428-WA0025.jpg" alt="Tournament 6">
-                <img src="IMG-20240428-WA0038.jpg" alt="Tournament 7">
             </div>
         </section>
     </div>
     <footer>
         <p>Ace Badminton Krakow, Poland &copy; 2023</p>
     </footer>
-    </body>
+</body>
 </html>
-   
