--- a/index.html
+++ b/index.html
@@ -100,6 +100,23 @@
             width: 100%;
             bottom: 0;
         }
+        footer p {
+            margin-bottom: 5px;
+        }
+        .social-links {
+            margin-top: 10px;
+        }
+        .social-links a {
+            display: inline-block;
+            margin: 0 10px;
+            color: #fff;
+            font-size: 1.2em;
+            text-decoration: none;
+            transition: color 0.3s ease;
+        }
+        .social-links a:hover {
+            color: #f39c12; /* Change color on hover */
+        }
         @media (max-width: 768px) {
             header {
                 background-size: 100px; /* Adjust the size for smaller screens */
@@ -243,6 +260,10 @@
     </div>
     <footer>
         <p>Ace Badminton Krakow, Poland &copy; 2023</p>
+        <div class="social-links">
+            <a href="https://www.instagram.com/aceclubkrakow?ig_sh=MWk0azNtaWVjaDB3cA==" target="_blank">Follow us on Instagram</a>
+            <a href="https://www.facebook.com/share/tDEkEky3okaXjGrC/" target="_blank">Follow us on Facebook</a>
+        </div>
     </footer>
 </body>
 </html>
