--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
         </section>
     </div>
     <footer>
-        <p>Ace Badminton Krakow, Poland &copy; 2023</p>
+        <!--p>Ace Badminton Krakow, Poland &copy; 2023</p>-->
         <div class="social-links">
             <p>Follow us on:</p>
             <a href="https://www.instagram.com/aceclubkrakow?ig_sh=MWk0azNtaWVjaDB3cA==" target="_blank">
