--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ace Badminton Krakow</title>
+    <title>Ace Badminton</title>
     <!-- Google Fonts: Roboto -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <style>
@@ -152,7 +152,7 @@
 
     <section id="showcase">
         <div>
-            <h1>Welcome to Ace Badminton Krakow</h1>
+            <h1>Welcome to Ace Badminton</h1>
             <p>Your home for badminton in Krakow, Poland</p>
         </div>
     </section>
@@ -163,17 +163,16 @@
             <div class="upcoming-tournaments-list">
                 <p><strong>Date:</strong> July 27, 2024</p>
                 <ul>
-                    <li>Men’s Singles (Open)</li>
-                    <li>Women’s Singles (Open)</li>
+                    <li>Men’s Singles (Open) - <em>Starts: 10:00 am | Reporting time: 9:45 am</em></li>
+                    <li>Women’s Singles (Open) - <em>Starts: 11:30 am | Reporting time: 11:15 am</em></li>
                 </ul>
                 <p><strong>Date:</strong> August 3, 2024</p>
                 <ul>
-                    <li>Men’s Doubles (Open)</li>
-                    <li>Men’s Doubles (Intermediate)</li>
-                    <li>Women’s Doubles (Open)</li>
-                    <li>Mixed Doubles (Open)</li>
-                    <li>Kids</li>
-                    <li>4Fun (at least one partner should not have registered in Open or intermediate category)</li>
+                    <li>Men’s Doubles (Open)- <em>Starts: 10:00 am | Reporting time: 9:45 am</em></li>
+                    <li>Women’s Doubles (Open)- <em>Starts: 10:00 am | Reporting time: 9:45 am</em></li>
+                    <li>Mixed Doubles (Open) - <em>Starts: 01:00 pm | Reporting time: 12:45 pm</em></li>
+                    <li>Kids - <em>Starts: 01:00 pm | Reporting time: 12:45 pm</em></li>
+                    <li>4Fun - <em>Starts: 01:00 pm | Reporting time: 12:45 pm</em>(at least one partner should not have registered in Open category)</li>
                 </ul>
                 <p><strong>Rules:</strong></p>
                 <ul>
