--- a/index.html
+++ b/index.html
@@ -124,6 +124,16 @@
             height: 30px;
             border-radius: 50%; /* Makes the icons circular if they are square */
         }
+
+        .category {
+            color: #1a73e8; /* Dark Blue for categories */
+            font-weight: bold;
+        }
+
+        .details {
+            color: #34a853; /* Dark Green for details */
+        }
+
         @media (max-width: 768px) {
             header {
                 background-size: 100px; /* Adjust the size for smaller screens */
@@ -163,16 +173,16 @@
             <div class="upcoming-tournaments-list">
                 <p><strong>Date:</strong> July 27, 2024</p>
                 <ul>
-                    <li>Men’s Singles (Open) - <em>Starts: 10:00 am | Reporting time: 9:45 am</em></li>
-                    <li>Women’s Singles (Open) - <em>Starts: 11:30 am | Reporting time: 11:15 am</em></li>
+                    <li class="category">Men’s Singles (Open) - <span class="details">Starts: 10:00 am | Reporting time: 9:45 am</span></li>
+                    <li class="category">Women’s Singles (Open) - <span class="details">Starts: 11:30 am | Reporting time: 11:15 am</span></li>
                 </ul>
                 <p><strong>Date:</strong> August 3, 2024</p>
                 <ul>
-                    <li>Men’s Doubles (Open)- <em>Starts: 10:00 am | Reporting time: 9:45 am</em></li>
-                    <li>Women’s Doubles (Open)- <em>Starts: 10:00 am | Reporting time: 9:45 am</em></li>
-                    <li>Mixed Doubles (Open) - <em>Starts: 01:00 pm | Reporting time: 12:45 pm</em></li>
-                    <li>Kids - <em>Starts: 01:00 pm | Reporting time: 12:45 pm</em></li>
-                    <li>4Fun - <em>Starts: 01:00 pm | Reporting time: 12:45 pm</em>(at least one partner should not have registered in Open category)</li>
+                    <li class="category">Men’s Doubles (Open)- <span class="details">Starts: 10:00 am | Reporting time: 9:45 am</span></li>
+                    <li class="category">Women’s Doubles (Open)- <span class="details">Starts: 10:00 am | Reporting time: 9:45 am</span></li>
+                    <li class="category">Mixed Doubles (Open) - <span class="details">Starts: 01:00 pm | Reporting time: 12:45 pm</span></li>
+                    <li class="category">Kids - <span class="details">Starts: 01:00 pm | Reporting time: 12:45 pm</span></li>
+                    <li class="category">4Fun - <span class="details">Starts: 01:00 pm | Reporting time: 12:45 pm</span> (at least one partner should not have registered in Open category)</li>
                 </ul>
                 <p><strong>Rules:</strong></p>
                 <ul>
@@ -256,9 +266,7 @@
                 <img src="11.jpeg" alt="Tournament 2">
                 <img src="10.jpeg" alt="Tournament 3">
                 <img src="IMG-20240428-WA0009.jpg" alt="Tournament 5">
-                
                 <img src="4.jpeg" alt="Tournament 4">
-                
                 <img src="3.jpeg" alt="Tournament 3">
                 <img src="5.jpeg" alt="Tournament 2">
                 <img src="12.jpeg" alt="Tournament 2">
