--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 </head>
 <body>
     <header>
-        <h1>Ace Badminton Krakow</h1>
+        <h1>Ace Badminton</h1>
     </header>
 
     <section id="showcase">
