--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 </head>
 <body>
     <header>
-        <h1>Ace Badminton</h1>
+        <h1>Ace Badminton Krakow</h1>
     </header>
 
     <section id="showcase">
@@ -173,16 +173,16 @@
             <div class="upcoming-tournaments-list">
                 <p><strong>Date:</strong> July 27, 2024</p>
                 <ul>
-                    <li class="category">Men’s Singles (Open) - <span class="details">Starts: 10:00 am | Reporting time: 9:45 am</span></li>
-                    <li class="category">Women’s Singles (Open) - <span class="details">Starts: 11:30 am | Reporting time: 11:15 am</span></li>
+                    <li class="category">Men’s Singles (Open) - <span class="details">Starts: 10:00 am | Reporting time: 9:45 am.</span></li>
+                    <li class="category">Women’s Singles (Open) - <span class="details">Starts: 11:30 am | Reporting time: 11:15 am.</span></li>
                 </ul>
                 <p><strong>Date:</strong> August 3, 2024</p>
                 <ul>
-                    <li class="category">Men’s Doubles (Open)- <span class="details">Starts: 10:00 am | Reporting time: 9:45 am</span></li>
-                    <li class="category">Women’s Doubles (Open)- <span class="details">Starts: 10:00 am | Reporting time: 9:45 am</span></li>
-                    <li class="category">Mixed Doubles (Open) - <span class="details">Starts: 01:00 pm | Reporting time: 12:45 pm</span></li>
-                    <li class="category">Kids - <span class="details">Starts: 01:00 pm | Reporting time: 12:45 pm</span></li>
-                    <li class="category">4Fun - <span class="details">Starts: 01:00 pm | Reporting time: 12:45 pm</span> (at least one partner should not have registered in Open category)</li>
+                    <li class="category">Men’s Doubles (Open) - <span class="details">Starts: 10:00 am | Reporting time: 9:45 am.</span></li>
+                    <li class="category">Women’s Doubles (Open)- <span class="details">Starts: 10:00 am | Reporting time: 9:45 am.</span></li>
+                    <li class="category">Mixed Doubles (Open) - <span class="details">Starts: 01:00 pm | Reporting time: 12:45 pm.</span></li>
+                    <li class="category">Kids - <span class="details">Starts: 01:00 pm | Reporting time: 12:45 pm.</span></li>
+                    <li class="category">4Fun - <span class="details">Starts: 01:00 pm | Reporting time: 12:45 pm.</span> (at least one partner should not have registered in Open category)</li>
                 </ul>
                 <p><strong>Rules:</strong></p>
                 <ul>
