--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
         </section>
 
         <section id="winners" class="section">
-            <h2>Last Tournament Winners List</h2>
+            <h2>Last Tournament Winners</h2>
             <div class="winners-list">
                 <h3>Kids</h3>
                 <ul>
