--- a/index.html
+++ b/index.html
@@ -270,6 +270,10 @@
                 <img src="3.jpeg" alt="Tournament 3">
                 <img src="5.jpeg" alt="Tournament 2">
                 <img src="12.jpeg" alt="Tournament 2">
+                <img src="13.jpeg" alt="Tournament 2">
+                <img src="14.jpeg" alt="Tournament 2">
+                <img src="15.jpeg" alt="Tournament 2">
+                <img src="16.jpeg" alt="Tournament 2">
             </div>
         </section>
     </div>
