--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                     <li class="category">Mixed Doubles (Open) - <span class="details">Starts: 01:00 pm | Reporting time: 12:45 pm.</span></li>
                     <li class="category">Kids - <span class="details">Starts: 01:00 pm | Reporting time: 12:45 pm.</span></li>
                     <li class="category">4Fun - <span class="details">Starts: 01:00 pm | Reporting time: 12:45 pm.</span> (at least one partner should not have registered in Open category)</li>
-                    <li class="category">Intermediate Doubles - <span class="details">Start Time - To be announced later, refer form for rules.</li>
+                    <li class="category">Intermediate Doubles - <span class="details">Start Time - To be announced later, refer registration form for rules.</li>
 
                 </ul>
                 <p><strong>Rules:</strong></p>
